--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     </style>
 </head>
-<body>
+<body> 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="#">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contacto">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -126,27 +126,7 @@
         <p class="text-center">
             Nuestra misión es proporcionar una experiencia de compra excepcional, con una selección cuidadosamente curada que incluye desde piezas elegantes y sofisticadas hasta opciones cómodas para el día a día. Cada artículo en nuestra tienda es elegido pensando en ti, para que te sientas única y especial.
         </p>
-    </div>
-    <!-- Sección de contacto -->
-    <div class="container mt-5" id="contacto">
-        <h2 class="text-center">Contacto</h2>
-        <form>
-            <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
-            </div>
-            <div class="form-group">
-                <label for="email">Correo Electrónico:</label>
-                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
-            </div>
-            <div class="form-group">
-                <label for="mensaje">Mensaje:</label>
-                <textarea class="form-control" id="mensaje" rows="3" placeholder="Escribe tu mensaje"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-    </div>
-    
+    </div> 
     <!-- Pie de página -->
     <footer class="footer bg-light text-center py-4">
         <p>© 2024 Dulce tentación. Todos los derechos reservados.</p>
