--- a/contacto.html
+++ b/contacto.html
@@ -4,27 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #ff6df0;
+        }
+        .container {
+            margin-top: 50px;
+            background: rgb(255, 255, 255);
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .btn-primary {
+            width: 100%;
+        }
+        a {
+            display: block;
+            text-align: center;
+            margin-top: 15px;
+            color: #ff6df0;
+        }
+    </style>
 </head>
 <body>
-    <h1>CONTÁCTANOS</h1>
-    <!-- Sección de contacto -->
-    <div class="container mt-5" id="contacto">
+    <div class="container">
+        <h1>CONTÁCTANOS</h1>
         <form>
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
+                <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre" required>
             </div>
             <div class="form-group">
                 <label for="email">Correo Electrónico:</label>
-                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico">
+                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electrónico" required>
             </div>
             <div class="form-group">
                 <label for="mensaje">Mensaje:</label>
-                <textarea class="form-control" id="mensaje" rows="3" placeholder="Escribe tu mensaje"></textarea>
+                <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
-    <a href="index.html">Volver a la página principal</a>
+        <a href="index.html">Volver a la página principal</a>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
